[tool.poetry]
name = "drl partie 2"
version = "0.1.0"
description = ""
authors = ["tom <ttaranto@ekinox.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = {extras = ["toy-text"], version = "^0.29.1"}
tqdm = "^4.66.5"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
